# oracle-ebs-rag

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: eval.yml
data/synthetic_notes/: NOTE-001-concurrent-stuck-pending.md  NOTE-002-workflow-mailer-not-sending.md  NOTE-003-abort-phase-failed.md
docs/: blog-post-dev-to.md
scripts/: ask.py  hello_vector.py  search.py
sql/: 01_users.sql  02_schema.sql  03_grants.sql
src/oracle_ebs_rag/: __init__.py  chunker.py  config.py  db.py  embedder.py  ingest.py  rag.py  retrieve.py
tests/eval/: baseline.json  golden.yaml  harness.py  judge.py  regression.py
